# prefect-nomad

./: pyproject.toml
prefect_nomad/: worker.py
